--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,15 +1,16 @@
 /* Sidebar.css */
 /* Basic styles for the side navigation */
 .sidebar {
-  width: 210px;
+  width: 315px;
   position: fixed;
   left: 10px;
   top: auto; 
   background-color: #d0e1ed;
-  padding: 50px;
+  padding: 40px;
   border: 1px solid #ddd;
   border-radius: 30px;
   z-index: 100; 
+  margin-left: 20px
 }
 
 .sidebar ul {
@@ -37,4 +38,28 @@
   text-decoration: underline;
   color: #007ACC; 
   transform: scale(1.1);
+}
+
+@media only screen and (max-width: 1500px) {
+  .sidebar {
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    width: 210px;
+    font-size: 10px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .sidebar {
+    width: 10px;
+    margin-left: 0;
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    width: 210px;
+    font-size: 10px;
+  }
 }
